--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "bootstrap": "^5.2.3",
     "emailjs-com": "^3.2.0",
     "mongoose": "^7.1.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-carousel": "^4.1.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-svg": "^2.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
